--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "BSD-2-Clause",
   "repository": "i40west/obfumatic",
   "homepage": "https://github.com/i40west/obfumatic",
-  "browser": "obfumatic.js"
+  "exports": {
+    ".": "obfumatic.js",
+    "./astro": "astro/ObfuMatic.astro"
+  }
 }
